# MISTYJELLYFISH

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  bot_config.json  pyproject.toml
misty_jellyfish/: __init__.py  bot.py  main.py
